[package]
name = "yupdates"
version = "0.0.2"
edition = "2021"
description = "Yupdates Rust SDK"
readme = "README.md"
homepage = "https://github.com/yupdates/yupdates-sdk-rs/"
repository = "https://github.com/yupdates/yupdates-sdk-rs/"
license = "MIT"

[dependencies]
reqwest = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", optional = true, features = ["rt-multi-thread"] }

[features]
default = ["sync_client"]
sync_client = ["tokio"]
