[package]
name = "yupdates"
version = "0.0.3"
edition = "2021"
description = "Yupdates Rust SDK"
readme = "README.md"
homepage = "https://github.com/yupdates/yupdates-sdk-rs/"
repository = "https://github.com/yupdates/yupdates-sdk-rs/"
license = "MIT"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread"] }

[dev-dependencies]
rand = "0.8"
tokio = { version = "1", features = ["macros", "test-util"] }

# Would like to make tokio optional in the future, currently using it directly for sleep (api.rs)
#[features]
#default = ["sync_client"]
#sync_client = ["tokio"]
